--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <li><a>Contact</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost text-4xl">Biker Zone</a>
+                  <a class="btn btn-ghost text-xl lg:text-4xl">Biker Zone</a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal px-1">
@@ -67,7 +67,7 @@
           <div id="slide1" class="carousel-item relative w-full">
             <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
               <div class="space-y-7 flex-1">
-                <h2 class="text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                <h2 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
                 <p>Amet minim mollit non deserunt ullamco 
                   est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                 <button class="btn bg-bike-primary text-white">Purchase</button>
@@ -82,30 +82,79 @@
             </div>
           </div> 
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="/images/slider/bike2.png" class="w-full" />
+            <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+              <div class="space-y-7 flex-1">
+                <h2 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn bg-bike-primary text-white">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="/images/slider/bike2.png" class="w-[400px]" />
+              </div>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide1" class="btn btn-circle">❮</a> 
               <a href="#slide3" class="btn btn-circle">❯</a>
             </div>
           </div> 
           <div id="slide3" class="carousel-item relative w-full">
-            <img src="/images/slider/bike3.png" class="w-full" />
+            <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+              <div class="space-y-7 flex-1">
+                <h2 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn bg-bike-primary text-white">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="/images/slider/bike3.png" class="w-[400px]" />
+              </div>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide2" class="btn btn-circle">❮</a> 
               <a href="#slide4" class="btn btn-circle">❯</a>
             </div>
           </div> 
           <div id="slide4" class="carousel-item relative w-full">
-            <img src="/images/slider/bike4.png" class="w-full" />
+            <div class="flex flex-col lg:flex-row gap-20 p-4 lg:p-24">
+              <div class="space-y-7 flex-1">
+                <h2 class="text-2xl lg:text-6xl font-bold">Ride-on R15 V4 <br>with Smile</h2>
+                <p>Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                <button class="btn bg-bike-primary text-white">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="/images/slider/bike4.png" class="w-[400px]" />
+              </div>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide3" class="btn btn-circle">❮</a> 
               <a href="#slide1" class="btn btn-circle">❯</a>
             </div>
           </div>
-        </div>
+        </div> 
     </header>
     <main class="md:container md:mx-auto">
+          <!-- featured bike -->
+          <section>
 
+          </section>
+          <!-- latest News -->
+          <section class="my-24">
+              <h3 class="text-5xl font-semibold text-center">Latest News</h3>
+              <div>
+                <div class="card w-96 glass">
+                  <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="car!"/></figure>
+                  <div class="card-body">
+                    <h2 class="card-title">Life hack</h2>
+                    <p>How to park your car at your garage?</p>
+                    <div class="card-actions justify-end">
+                      <button class="btn btn-primary">Learn now!</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </section>
     </main>
     <footer>
 
