--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 </head>
 <body class="font-poppins">
     <header class="md:container md:mx-auto">
+      <!-- navbar -->
         <nav>
             <div class="navbar bg-base-100">
                 <div class="flex-1">
@@ -90,7 +91,7 @@
                 <button class="btn bg-bike-primary text-white">Purchase</button>
               </div>
               <div class="flex-1">
-                <img src="https://github.com/JannatulAfrozFaria/bikers-zone/blob/main/images/slider/bike2.png" class="w-[400px]" />
+                <img src="images/slider/bike2.png" class="w-[400px]" />
               </div>
             </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -141,15 +142,38 @@
           </section>
           <!-- latest News -->
           <section class="my-24">
-              <h3 class="text-5xl font-semibold text-center">Latest News</h3>
-              <div>
-                <div class="card w-96 glass">
-                  <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="car!"/></figure>
+              <h3 class="text-5xl mb-12 font-semibold text-center">Latest Bikes</h3>
+              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+                <!-- first card -->
+                <div class="card  glass">
+                  <figure><img src="images/others/latest1.png" alt="car!"/></figure>
                   <div class="card-body">
-                    <h2 class="card-title">Life hack</h2>
-                    <p>How to park your car at your garage?</p>
-                    <div class="card-actions justify-end">
-                      <button class="btn btn-primary">Learn now!</button>
+                    <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <div class="card-actions">
+                      <button class="btn bg-bike-primary text-white">Read More</button>
+                    </div>
+                  </div>
+                </div>
+                <!-- second card -->
+                <div class="card glass">
+                  <figure><img src="images/others/latest2.png" alt="car!"/></figure>
+                  <div class="card-body">
+                    <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <div class="card-actions">
+                      <button class="btn bg-bike-primary text-white">Read More</button>
+                    </div>
+                  </div>
+                </div>
+                <!-- third card -->
+                <div class="card glass">
+                  <figure><img src="images/others/latest3.png" alt="car!"/></figure>
+                  <div class="card-body">
+                    <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
+                    <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                    <div class="card-actions">
+                      <button class="btn bg-bike-primary text-white">Read More</button>
                     </div>
                   </div>
                 </div>
