--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <h3 class="text-5xl mb-12 font-semibold text-center">Latest Bikes</h3>
               <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
                 <!-- first card -->
-                <div class="card  glass">
+                <div class="card  glass pt-5">
                   <figure><img src="images/others/latest1.png" alt="car!"/></figure>
                   <div class="card-body">
                     <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
@@ -156,7 +156,7 @@
                   </div>
                 </div>
                 <!-- second card -->
-                <div class="card glass">
+                <div class="card glass pt-5">
                   <figure><img src="images/others/latest2.png" alt="car!"/></figure>
                   <div class="card-body">
                     <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
@@ -167,7 +167,7 @@
                   </div>
                 </div>
                 <!-- third card -->
-                <div class="card glass">
+                <div class="card glass pt-5">
                   <figure><img src="images/others/latest3.png" alt="car!"/></figure>
                   <div class="card-body">
                     <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
@@ -178,6 +178,33 @@
                   </div>
                 </div>
               </div>
+          </section>
+          <!--Happy client Section  -->
+          <section class="my-24">
+            <h3 class="text-5xl mb-12 font-semibold text-center">Happy <span class="text-bike-primary">Clients Says</span></h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5">
+              <!-- first review -->
+              <div class="card glass p-9 border border-gray-400" >
+                <figure><img class="w-36" src="images/others/user-1.png" alt="car!"/></figure>
+                <div class="card-body">
+                  <p>Slate helps you see how 
+                    many more days you need 
+                    to work to reach your financial 
+                    goal for the month and year.</p>
+                    <div class="rating justify-center my-4">
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                      <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                  <div class=" text-center space-y-4 ">
+                    <h4 class="text-sm font-semibold text-info">Regina Miles</h4>
+                    <p>Banker</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
     </main>
     <footer>
