--- a/index.html
+++ b/index.html
@@ -300,13 +300,26 @@
                 </div>
           </section>
     </main>
-    <footer class="footer p-10 bg-neutral text-neutral-content">
-      <aside>
-        
-        <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
+    <footer class="footer p-10 bg-neutral text-neutral-content py-4 lg:py-14">
+      <aside class="px-0 lg:px-40">
+        <div class="flex flex-row gap-2 lg:gap-6">
+          <a href="#">Download Now</a>
+        <a href="#">Licence</a>
+        </div>
+        <div class="flex flex-row gap-2 lg:gap-6">
+          <a href="#">About</a>
+          <a href="#">Features</a>
+          <a href="#">Pricing</a>
+          <a href="#">Careers</a>
+          <a href="#">Help</a>
+          <a href="#">Privacy Policy</a>
+        </div>
+        <div>
+          © 2020 bike. All rights reserved
+        </div>
       </aside> 
       <nav>
-        <header class="footer-title">Social</header> 
+        <header class="footer-title">Get The App</header> 
         <div class="grid grid-cols-1 gap-4">
           <a><img class="w-36" src="images/others/ios.png" alt=""></a>
           <a><img class="w-36" src="images/others/android.png" alt=""></a>
